# SFML-tutorial

./: CMakeLists.txt  README.md  main.cpp
headers/: Game.h  GameState.h
src/: Game.cpp  main.cpp
